--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>I am coding man and mama I am coding</h1>
     <h3>Mama I can do this work</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, sint.</p>
     
 </body>
 </html>
