--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>I am coding man and mama I am coding</h1>
     <h3>Mama I can do this work</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, sint.</p>
+    <img src="../DAY-1-class-HTML/img/team-2.jpg" alt="">
     
 </body>
 </html>
