--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>Mama I can do this work</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, sint.</p>
     <img src="team-2.jpg" alt="">
+    <h2>Lorem ipsum dolor sit amet.</h2>
     
 </body>
 </html>
