--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <h3>Mama I can do this work</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, sint.</p>
     <img src="team-2.jpg" alt="">
-<<<<<<< HEAD
-    <h2>Lorem  looks mamma ipsum dolor sit amet. ipsum dolor sit amet</h2>
-=======
-    <h2>Lorem looks mammammas sa ipsum dolor sit amet.</h2>
->>>>>>> new-repo
+    <h2>Lorem looks mammammas sa ipsum dolor sit amet. mammammas</h2>
     
 </body>
 </html>
