--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <img src="team-2.jpg" alt="">
     <h2>Lorem looks mammammas sa ipsum dolor sit amet. mammammas</h2>
     <h1>Abu Bakker Siddik Gitto marbe ekhon</h1>
+    <img src="abu.jpg" alt="">
 </body>
 </html>
